# pyemberstore

./: 02_todo.md  CONTRIBUTING.md  README.md  example.py  firestore_overview.md  memory.md  plan.md  pyember_todo.md  pyproject.toml
.github/: copilot-instructions.md
docs/: design.md  spec.md
src/pyemberstore/: __init__.py  __main__.py  client.py  errors.py  grpc_emulator.py  http_app.py  storage.py
tests/: test_async_example_coverage.py  test_client.py  test_concurrency.py  test_grpc_emulator_integration.py  test_http_api.py  test_transactions.py
